Fixed missing gap in labels
Sets a default box-sizing in order to prevent misbehaviour.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,7 @@ html {
     min-height: 100vh;
     padding-left: $BodyPaddingLeftRight;
     padding-right: $BodyPaddingLeftRight;
+    box-sizing: content-box;
 
     input {
       font-family: Aeonik;
